hw2-collections  quickSort заменена на Arrays.sort; добавлены юнит-тесты

--- a/L02-collections/pom.xml
+++ b/L02-collections/pom.xml
@@ -12,6 +12,22 @@
     <artifactId>L02-collections</artifactId>
     <name>L02-collections</name>
     <packaging>jar</packaging>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
