--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>L02-collections</module>
         <module>L04-aop</module>
         <module>L06-atm_emulator</module>
+        <module>L07-atm-department</module>
     </modules>
 
     <properties>
